--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxml
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxml
@@ -46,6 +46,7 @@
    <view class="totalNum">{{totalNum1}}</view>
    </view>
 </view>
+<view class="scoreWhite"></view>
 <view class="submit" bindtap="submit">提交</view>
   <!--错语提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
