--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
@@ -8,7 +8,11 @@
   padding-top: 56rpx;
   padding-bottom: 40rpx;
 }
-
+.scoreWhite{
+  width: 100%;
+  height: 150rpx;
+  background: #ffffff;
+}
 .sliderTitle {
   width: 80%;
   height: 2rpx;
@@ -117,7 +121,7 @@
   padding-bottom: 32rpx;
   padding-top: 32rpx;
   padding-left: 32rpx;
-  margin-bottom: 190rpx;
+  /* margin-bottom: 190rpx; */
 }
 
 .scoreTitle {
@@ -141,7 +145,7 @@
 }
 
 .scoreItem1Left {
-  width: 70%;
+  width: 75%;
 }
 
 .scoreItem1Right {
