--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -548,10 +548,14 @@ textarea {
 
 .t-insideBox {
   padding: 32rpx 32rpx 24rpx 32rpx;
-  background: #fff;
   border-radius: 8rpx;
 }
-
+.t-insideBoxColor{
+  background: #fff;
+}
+.t-insideBoxColorAfter{
+  background: #f2f3f4;
+}
 .t-outBox .t-describle {
   font-size: 34rpx;
   color: #333;
