--- a/Weitianshi/pages/form/area1/area1.wxml
+++ b/Weitianshi/pages/form/area1/area1.wxml
@@ -8,9 +8,9 @@
   </scroll-view>
   <scroll-view scroll-y="true" class="frame_city">
     <view>
-      <block wx:for="{{city {{item.check == true ? 'checkOn':''}}}}" wx:for-index='idx' wx:key="{{item.area_id}}">
-        <view class="city" bindtap="city" data-index='{{idx}}' data-id='{{item.area_id}}' wx:key="{{item.area_id}}">{{item.area_title}}</view>
+      <block wx:for="{{city}}" wx:for-index='idx' wx:key="{{item.area_id}}">
+        <view class="city {{item.check == true ? 'checkOn2':''}}" bindtap="city" data-index='{{idx}}' data-id='{{item.area_id}}' wx:key="{{item.area_id}}">{{item.area_title}}</view>
       </block>
     </view> 
-  </scroll-view>
+  </scroll-view> 
 </view>
