--- a/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
+++ b/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
@@ -26,7 +26,7 @@
   </view>
   <view class="card">
     <view class="text">投资地区*</view>
-    <view class="card_case" id="case_local" bindtap="case_local">{{belongArea.area_title||"请选择"}}</view>
+    <view class="card_case" id="case_local" bindtap="case_local">{{belongArea.area_title||"请选择地区"}}</view>
   </view>
 </view>
 <view style="height:118rpx;"></view>
