--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxml
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxml
@@ -153,7 +153,7 @@
     维护项目
   </button> -->
 <view class="highBox"></view>
-<template is="buttonOne" data="{{text:'保存',btnName:'public'}}"></template>
+<template is="buttonOne" data="{{text:'保存',btnName:'public',disabled}}"></template>
 
 <view class="modalBox" hidden="{{modalBox==0}}">
   <view class="classname" bindtap="closeModal">
