--- a/Weitianshi/pages/match/match/investDemand/investDemand.wxml
+++ b/Weitianshi/pages/match/match/investDemand/investDemand.wxml
@@ -42,9 +42,9 @@
     <view class="text">投资地区*</view>
     <navigator url="/pages/form/area2/area2" id="payArea">
       <view class="slect flex">
-        <view wx:if="{{tran_area == ''}}">选择城市</view>
-        <view class="checkOn" wx:else="{{tran_area != ''}}">
-          <block wx:for="{{tran_area}}" wx:key="{{index}}">{{item.area_title}},</block>
+        <view wx:if="{{tran_hotCity == ''}}">选择城市</view>
+        <view class="checkOn" wx:else="{{tran_hotCity != ''}}">
+          <block wx:for="{{tran_hotCity}}" wx:key="{{index}}">{{item.area_title}},</block>
         </view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
