--- a/Weitianshi/pages/form/industry/industry.wxml
+++ b/Weitianshi/pages/form/industry/industry.wxml
@@ -2,12 +2,12 @@
 <view id="doMain">
   <view class="title">*最多可选择5个</view>
   <view class="context flex">
-    <<<<<<< HEAD <block wx:for="{{industry}}" wx:key="{{item.industry_id}}">
+    <block wx:for="{{industry}}" wx:key="{{item.industry_id}}">
       <label class="tips">
         <view class="{{item.check == true ?'checkedOne':''}}" id="{{item.industry_id}}" data-index="{{index}}" data-item="{{item}}" bindtap="checkboxChange">
           {{item.industry_name}}</view>
       </label>
-      </block>
+    </block>
   </view>
   <button class="nextBtn" hover-class="t-other-button-hover" bindtap="certain">
     确定
