--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -14,7 +14,7 @@
   <swiper-item data-current='0'>
     <scroll-view style="height:100%;" scroll-y="true">
       <view class="bigTitle">
-       <image src="{{banner_organization}}" class="bigTitle"></image> 
+        <image src="{{banner_organization}}" class="bigTitle"></image>
         <view class="searchSth" bindtap="allSearch">请输入机构名称，成员姓名，投资领域
           <view class="searchImageBox">
             <image src="/img/icon-sousuo@2x.png" class="searchImage"></image>
@@ -27,29 +27,35 @@
         <view class="blockIntro">* 机器人Angel深度挖掘机构投资风格</view>
         <view class="flex investmentListBox">
           <block wx:for="{{investormentList.style_list}}" wx:key="{{index}}">
-            <view class="investStyleBlock" data-style="{{item.style_id}}"  bindtap="toStyle">
+            <view class="investStyleBlock" data-style="{{item.style_id}}" hover-class='t-hoverColor' bindtap="toStyle">
               <view class="investStyleTitle">{{item.style_name}}</view>
-              <view class="investStyleWord"><label class="investStyleNum">{{item.investment_num}}</label>  个机构</view>
+              <view class="investStyleWord">
+                <label class="investStyleNum">{{item.investment_num}}</label> 个机构</view>
             </view>
           </block>
         </view>
       </view>
 
       <!--热门领域  -->
-      <view class="outStyleBox">
-        <view class="flex title">
-          <view class="blockTitle">热门领域</view>
-          <view class="allThing" bindtap="toGoIndustry">全部<label>（{{investormentList.industry_list.industry_total_num}}）</label></view>
-        </view>
-        <view class="blockIntro">* 近期创投媒体热议领域</view>
-        <view class="industryTitleBlock flex">
-          <view class="industryTitle">领域</view>
-          <view class="industryTitle">已投机构</view>
-          <view class="industryTitle">创业项目</view>
-          <view class="industryTitle">媒体热度</view>
+      <!--outStyleBox  -->
+      <view class="outStyleBox1">
+        <view class="outPadding">
+          <view class="flex title">
+            <view class="blockTitle">热门领域</view>
+            <view class="allThing" bindtap="toGoIndustry">全部
+              <label>（{{investormentList.industry_list.industry_total_num}}）</label>
+            </view>
+          </view>
+          <view class="blockIntro">* 近期创投媒体热议领域</view>
+          <view class="industryTitleBlock flex">
+            <view class="industryTitle">领域</view>
+            <view class="industryTitle">已投机构</view>
+            <view class="industryTitle">创业项目</view>
+            <view class="industryTitle">媒体热度</view>
+          </view>
         </view>
         <block wx:for="{{investormentList.industry_list.list}}" wx:key="{{index}}">
-          <view class="industryContentBlock flex" data-id="{{item.industry_id}}" bindtap="toIndustrySearch" >
+          <view class="industryContentBlock flex" data-id="{{item.industry_id}}" hover-class='t-hoverColor' bindtap="toIndustrySearch">
             <view class="industryContentTitle">{{item.industry_name}}</view>
             <view class="industryContent">{{item.investment_num}}</view>
             <view class="industryContent">{{item.event_num}}</view>
@@ -68,7 +74,9 @@
       <view class="outStyleBox" id="investment">
         <view class="flex title">
           <view class="blockTitle">投资机构</view>
-          <view class="allThing" bindtap="toGoInvestment">全部<label>（{{investormentList.investment_list.investment_total_num}}）</label></view>
+          <view class="allThing" bindtap="toGoInvestment">全部
+            <label>（{{investormentList.investment_list.investment_total_num}}）</label>
+          </view>
         </view>
         <template is="investment" data="{{investment_list}}"></template>
       </view>
@@ -81,8 +89,10 @@
       <template is="searchNothing" data="{{empty:investorList}}"></template>
       <block wx:for="{{investorList}}" wx:key="{{investorList}}">
         <view class='investorCard'>
-          <template is='InvestorCard' data='{{item}}'></template>
-          <template is='cardBottom1' data='{{item,user_id}}'></template>
+          <view class="t-investorColor" hover-class='t-hoverColor'>
+            <template is='InvestorCard' data='{{item}}'></template>
+            <template is='cardBottom1' data='{{item,user_id}}'></template>
+          </view>
         </view>
       </block>
       <view class="high"></view>
@@ -97,8 +107,10 @@
       <template is="searchNothing" data="{{empty:faList}}"></template>
       <block wx:for="{{faList}}" wx:key="{{faList}}">
         <view class='investorCard'>
-          <template is='InvestorCard' data='{{item}}'></template>
-          <template is='cardBottom1' data='{{item,user_id}}'></template>
+          <view class="t-investorColor" hover-class='t-hoverColor'>
+            <template is='InvestorCard' data='{{item}}'></template>
+            <template is='cardBottom1' data='{{item,user_id}}'></template>
+          </view>
         </view>
       </block>
       <view class="high"></view>
@@ -144,62 +156,68 @@
   <!-- <view bindtap="goTo">
     <image src="{{activtyBanner}}" class="contactsPic"></image>
   </view> -->
-  <scroll-view scroll-y="true" bindscrolltolower="loadMore"  style='height:90%'>
+  <scroll-view scroll-y="true" bindscrolltolower="loadMore" style='height:90%'>
     <view class="aBox"></view>
-    <block wx:for="{{myList}}" wx:key="{{item.user_id}}">
-     <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
-      <view class="t-applyMyProject t-contacts-detailm">
-        <view class="t-introduceBox flex">
-          <view class="t-userName">{{item.user_real_name}}</view>
-          <view class="t-userPosition">{{item.user_company_career}}</view>
-          <view class="t-userPart flex" wx:if="{{item.authentication}}">
-            <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
-            <view class="t-userPart1">{{item.authentication.group_title}}</view>
+    <view class='investorCard'>
+
+      <block wx:for="{{myList}}" wx:key="{{item.user_id}}">
+        <view class="t-investorColor" hover-class='t-hoverColor'>
+          <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+            <view class="t-applyMyProject t-contacts-detailm">
+              <view class="t-introduceBox flex">
+                <view class="t-userName">{{item.user_real_name}}</view>
+                <view class="t-userPosition">{{item.user_company_career}}</view>
+                <view class="t-userPart flex" wx:if="{{item.authentication}}">
+                  <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
+                  <view class="t-userPart1">{{item.authentication.group_title}}</view>
+                </view>
+                <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+                <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
+              </view>
+              <view class="t-userCompany">{{item.user_company_name}}</view>
+              <view class="t-record">{{item.active_status}}</view>
+              <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
+                <view class="t-roundGroupTitle">投资领域：</view>
+                <view class="t-roundGroupContent">
+                  <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
+                    <label wx:if="{{index < item.user_invest_industry.length-1}}">{{industryItem.industry_name}}、</label>
+                    <label wx:if="{{index ==  item.user_invest_industry.length-1}}"> {{industryItem.industry_name}} </label>
+                  </block>
+                </view>
+              </view>
+              <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
+                <view class="t-roundGroupTitle">投资轮次：</view>
+                <view class="t-roundGroupContent">
+                  <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
+                    <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
+                    <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
+                  </block>
+                </view>
+              </view>
+            </view>
+            <view class='cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
+              <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
+                <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
+                <span>推送项目</span>
+              </view>
+              <view class="t-line"></view>
+              <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
+                <image class='t-itemPic' src='/img/icon-dadainhua@2x.png'></image>
+                <view>打电话</view>
+              </view>
+            </view>
+            <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
           </view>
-          <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-          <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
         </view>
-        <view class="t-userCompany">{{item.user_company_name}}</view>
-        <view class="t-record">{{item.active_status}}</view>
-        <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
-          <view class="t-roundGroupTitle">投资领域：</view>
-          <view class="t-roundGroupContent">
-            <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
-              <label wx:if="{{index < item.user_invest_industry.length-1}}">{{industryItem.industry_name}}、</label>
-              <label wx:if="{{index ==  item.user_invest_industry.length-1}}"> {{industryItem.industry_name}} </label>
-            </block>
-          </view>
-        </view>
-        <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
-          <view class="t-roundGroupTitle">投资轮次：</view>
-          <view class="t-roundGroupContent">
-            <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
-              <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
-              <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
-            </block>
-          </view>
-        </view>
-      </view>
-     <view class='cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
-    <view class='t-cardBottomItem flex' data-id='{{item.user_id}}' catchtap='projectPush'>
-      <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
-      <span>推送项目</span>
+      </block>
+
     </view>
-     <view class="t-line"></view>   
-    <view class='t-cardBottomItem flex'  data-telephone="{{item.user_mobile}}" catchtap="telephone" >
-      <image class='t-itemPic' src='/img/icon-dadainhua@2x.png'></image>
-      <view >打电话</view>
-    </view>
-  </view>
-  <view  class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
-</view>
-</block>
     <view class="high"></view>
-</scroll-view>
+  </scroll-view>
 </template>
 <template name="searchNothing">
   <view class="searchNothing" wx:if="{{empty.length == 0}}">
-     <view class="searchLine"></view>
+    <view class="searchLine"></view>
     <view class="classname">暂时没有符合该条件的数据</view>
   </view>
 </template>
