--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxss
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxss
@@ -157,12 +157,12 @@
 
 .cardBottom {
   border-top: 2rpx solid #e6e6e6;
-  padding-top: 30rpx;
-  padding-bottom: 30rpx;
+  /* padding-top: 30rpx;
+  padding-bottom: 30rpx; */
   margin: 0;
   font-size: 28rpx;
   color: #40587a;
-  background: white;
+  /* background: white; */
   margin-bottom: 24rpx;
 }
 
@@ -216,7 +216,13 @@
   background: #fff;
   padding: 32rpx;
 }
-
+.outStyleBox1 {
+  margin-bottom: 32rpx;
+  background: #fff;
+}
+.outPadding{
+  padding: 32rpx 32rpx 0 32rpx;
+}
 .outStyleBox:last-child {
   margin-bottom: 0;
 }
@@ -310,9 +316,7 @@
 .industryContentBlock {
   font-size: 28rpx;
   color: #333;
-  line-height: 30rpx;
-  text-align: left;
-  margin-bottom: 64rpx;
+  line-height: 80rpx;
 }
 
 .industryContentBlock:last-child {
@@ -321,6 +325,7 @@
 
 .industryContentTitle {
   width: 304rpx;
+  margin-left: 36rpx;
 }
 
 .industryContent {
@@ -346,14 +351,14 @@
 .down {
   font-size: 20rpx;
   color: #28dc41;
-  line-height: 30rpx;
+  line-height: 70rpx;
   text-align: left;
 }
 
 .up {
   font-size: 20rpx;
   color: #f44c4c;
-  line-height: 30rpx;
+  line-height: 70rpx;
   text-align: left;
 }
 
@@ -361,7 +366,7 @@
   width: 12rpx;
   height: 6rpx;
   padding-top: 12rpx;
-  margin: 0 4rpx 0 12rpx;
+  margin: 18rpx 4rpx 0 12rpx;
 }
 
 .high {
@@ -372,4 +377,8 @@
 .industryNum {
   width: 80rpx;
   margin-right: 5rpx;
+}
+.t-investorColor{
+  background: #fff;
+  margin: 0 30rpx 0 30rpx;
 }
