--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1657,7 +1657,7 @@ page {
 }
 
 .btn1 {
-  margin-left: 36rpx;
+  padding-left: 36rpx;
   width: 33.5%;
 }
 
@@ -1751,7 +1751,7 @@ page {
   line-height: 28rpx;
   text-align: center;
   background: #40587a;
-  margin: 30rpx 0;
+  padding: 30rpx 0;
   padding-right: 36rpx;
   border-right: 1rpx solid #e6e6e6;
   white-space: nowrap;
