--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -186,13 +186,13 @@
 </view>
 
 <view class=" flex floatBtn flexBox" hidden="{{currentTab==1}}" >
-  <view class="collectBox" bindtap="collectProject">
+  <view class="collectBox" hover-class='t-hoverColor' bindtap="collectProject">
     <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
   </view>
-  <view class="contactProject" catchtap="contactPerson">联系项目方</view>
-  <view class="businessBook" catchtap="businessBook" wx:if="{{button_type == 1}}">商业计划书</view>
+  <view class="contactProject" hover-class='t-other-button-hover' catchtap="contactPerson">联系项目方</view>
+  <view class="businessBook" catchtap="businessBook" hover-class='t-other-button-hover' wx:if="{{button_type == 1}}">商业计划书</view>
   <view class="businessBook1" wx:if="{{button_type == 0}}">申请中</view>
-  <view class="businessBook project-applicationm" bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
+  <view class="businessBook project-applicationm" hover-class='t-other-button-hover' bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
   <view class="businessBook project-applicationm" bindtap="applyProject" wx:if="{{button_type == 2}}" data-project="{{id}}">重新申请</view>
 </view>
 <view class=" flex floatBtn flexBox jigou" bindtap='toMap' hidden="{{currentTab==0||currentTab==2 }}">
@@ -206,7 +206,7 @@
     <view class="modalTitle">联系项目方</view>
     <textarea class="modalContent" placeholder="请简要描述您的意向约谈时间,方式" bindinput="contentProject" />
     <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
-    <view class="btn" bindtap="yesBtn">确定</view>
+    <view class="btn" hover-class='t-other-button-hover'  bindtap="yesBtn">确定</view>
   </view>
 </view>
 <!--没有更多-->
